# AndroidDebugDemos

./: .gitignore  README.md  gradle.properties  settings.gradle
AV01-DynamicAdjustVolume/: build.gradle
AV03-PlayRingtone/: build.gradle
AV11_AudioEffect/: build.gradle
AV12_SoundRecorder/: build.gradle
Codec-BitmapCodec/: build.gradle
Codec-JPGCodec/: build.gradle
Codec-PngCodec/: build.gradle
Codec_AndroidBitmap/: build.gradle
ColorSlideShow/: build.gradle
CropSetDemo/: build.gradle
CtsSmallStructsTest/: build.gradle
D01-CropSetDemo/: build.gradle
D02-CtsSmallStructsTest/: build.gradle
D03-DialogInputTextview/: build.gradle
D04-MemoryDebug/: CMakeLists.txt  build.gradle
D05-ColorSlideShow/: build.gradle
D06-NativeBroardCast/: build.gradle
D07-RenderScriptDemo/: build.gradle
D08-ToastDemo/: build.gradle
D10-SurfacePixelValidator/: CMakeLists.txt  build.gradle
D11-RenderScript/: build.gradle
D12-OpenGL2Basic/: CMakeLists.txt  build.gradle
D12-OpenGL2Basic/src/main/: AndroidManifest.xml
D12-OpenGL2Basic/src/main/cpp/: MyLog.cpp  OpenGL2Basic.cpp
D14-JsonFile/: build.gradle
D16_ImageViewDemo/: build.gradle
D17-FodTest/: build.gradle
Decoder-Bitmap/: build.gradle
DialogInputTextview/: build.gradle
Img01-ImageThumbnail/: build.gradle
Img02_BitmapMatrix/: build.gradle
JPGDecoder/: build.gradle
MemoryDebug/: build.gradle
NativeBroardCast/: build.gradle
PngCodec/: CMakeLists.txt  build.gradle
RenderScriptDemo/: build.gradle
app/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
(+60 files in other folders)
